--- a/population-simulator/package.json
+++ b/population-simulator/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "topojson": "^3.0.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/topojson-client": "^3.1.4",
     "autoprefixer": "^10.4.17",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
